# deepsea_viewer

./: .gitignore  README.md  bun.lockb  package.json
.github/workflows/: deploy.yml
frontend/: .eslintignore  .prettierignore  bun.lockb  package.json  svelte.config.js  tailwind.config.js
frontend/src/lib/components/: cascadedropdown copy.svelte  cascadedropdown.svelte  dropdown.svelte  heatmap.svelte  navbar.svelte
frontend/src/lib/stores/: core.js  param.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/static/: export
pipeline/: main.py  pyproject.toml
pipeline/deepsea_viewer/: cli.py  data_pb2.py  example.py
proto/: data.proto
